feat: added Slope calc
